--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="relative z-10 max-w-screen-lg xl:max-w-screen-xl mx-auto align-center">
     <div class="px-4 sm:px-6 md:px-8 mb-14 sm:mb-20 xl:mb-8">
-      <h1 class="text-4xl sm:text-6xl lg:text-7xl leading-none font-extrabold text-center tracking-tight text-gray-900 mt-10 mb-8 sm:mt-14 sm:mb-10">Show last weeks total working hours on your Teknokent Arge Portal</h1>
+      <h1 class="text-4xl sm:text-6xl lg:text-7xl leading-none font-extrabold text-center tracking-tight text-gray-900 mt-10 mb-8 sm:mt-14 sm:mb-10">Show last week's total working hours on your Teknokent Arge Portal</h1>
       <p class="max-w-screen-lg text-lg sm:text-2xl sm:leading-10 font-medium text-center mb-10 sm:mb-11 mx-auto">Drag this button to your bookmark bar, go to your arge portal and open hours panel, click the bookmarklet.</p>
       <div class="flex flex-wrap justify-center space-y-4 sm:space-y-0 sm:space-x-4 text-center">
         <a class="w-full sm:w-auto flex-none bg-gray-900 hover:bg-gray-700 text-white text-lg leading-6 font-semibold py-3 px-6 border border-transparent rounded-xl focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-gray-900 focus:outline-none transition-colors duration-200" id="bookmarklet" href="">Show Total Hours for the Last Week</a>
