--- a/old/index.html
+++ b/old/index.html
@@ -5,19 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Show Working Hours for the Last Week Bookmarklet</title>
+
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="relative z-10 max-w-screen-lg xl:max-w-screen-xl mx-auto align-center">
     <div class="px-4 sm:px-6 md:px-8 mb-14 sm:mb-20 xl:mb-8">
-      <h1 class="text-4xl leading-none font-extrabold text-center tracking-tight text-gray-900 mt-10 mb-8 sm:mt-14 sm:mb-10">Show Last Week's Total Working Hours on Your Teknokent Arge Portal</h1>
-      <p class="max-w-screen-lg text-lg sm:text-2xl sm:leading-10 font-medium text-center mb-10 sm:mb-11 mx-auto">Drag this button to your bookmark bar,<br /> go to your ARGE Portal and open hours panel,<br /> click the bookmarklet.</p>
+      <h1 class="text-4xl sm:text-6xl lg:text-7xl leading-none font-extrabold text-center tracking-tight text-gray-900 mt-10 mb-8 sm:mt-14 sm:mb-10">Show last week's total working hours on your Teknokent Arge Portal</h1>
+      <p class="max-w-screen-lg text-lg sm:text-2xl sm:leading-10 font-medium text-center mb-10 sm:mb-11 mx-auto">Drag this button to your bookmark bar, go to your arge portal and open hours panel, click the bookmarklet.</p>
       <div class="flex flex-wrap flex-col items-center justify-center space-y-4 text-center">
         <a class="w-full sm:w-auto flex-none bg-gray-900 hover:bg-gray-700 text-white text-lg leading-6 font-semibold py-3 px-6 border border-transparent rounded-xl focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-gray-900 focus:outline-none transition-colors duration-200" id="bookmarklet" href="">Show Total Hours for the Last Week</a>
-        <span class="text-gray-300">Lastest Version: 2.0.0</span>
+        <span class="text-gray-300">Lastest Version: 1.2.0</span>
       </div>
 
-      <div class="relative my-10 lg:mx-40">
+      <div class="relative my-20 lg:mx-40">
         <img src="ss.png" alt="" class="w-full h-full object-cover rounded-lg" />
       </div>
     </div>
