added new button to seperate stable and dev versions

--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
   <div class="relative z-10 max-w-screen-lg xl:max-w-screen-xl mx-auto align-center">
     <div class="px-4 sm:px-6 md:px-8 mb-10 sm:mb-20 xl:mb-8">
       <h1 class="text-4xl leading-none font-extrabold text-center tracking-tight text-gray-900 mt-10 mb-8 sm:mt-14 sm:mb-10">Show Last Week's Total Working Hours on Your Teknokent Arge Portal</h1>
-      <p class="max-w-screen-lg text-lg sm:text-2xl sm:leading-10 font-medium text-center mb-10 sm:mb-11 mx-auto">Drag this button to your bookmark bar,<br /> go to your ARGE Portal and open hours panel,<br /> click the bookmarklet.</p>
+      <p class="max-w-screen-lg text-lg sm:text-2xl sm:leading-10 font-medium text-center mb-10 sm:mb-11 mx-auto"><u>DRAG</u> one of the these buttons to your bookmark bar,<br /> go to your ARGE Portal and open hours panel,<br /> click the bookmarklet.</p>
       <div class="flex flex-wrap flex-col items-center justify-center space-y-4 text-center">
-        <a class="w-full sm:w-auto flex-none bg-gray-900 hover:bg-gray-700 text-white text-lg leading-6 font-semibold py-3 px-6 border border-transparent rounded-xl focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-gray-900 focus:outline-none transition-colors duration-200" id="bookmarklet" href="">Show Total Hours for the Last Week</a>
+        <div class="flex space-x-20">
+            <div>
+                <a class="w-full sm:w-auto flex-none bg-gray-900 hover:bg-gray-700 text-white text-xl leading-6 font-semibold py-3 px-6 border border-transparent rounded-xl focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-gray-900 focus:outline-none transition-colors duration-200" id="bookmarklet" href="">Time Calculator</a>
+                <p class="mt-4 text-xs text-center">stable version [v2.0.0]</p>
+            </div>
+            <div>
+                <a class="w-full sm:w-auto flex-none bg-gray-900 hover:bg-gray-700 text-white text-xl leading-6 font-semibold py-3 px-6 border border-transparent rounded-xl focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-gray-900 focus:outline-none transition-colors duration-200" id="bookmarklet-2" href="">Time Calculator</a>
+                <p class="mt-4 text-xs text-center">development version</p>
+            </div>
+        </div>
         <a href="old/index.html">Old Version</a>
         <span class="text-gray-300">Latest Version: v2.0.0</span>
       </div>
@@ -27,12 +36,14 @@
   <script type="text/javascript">
     var client = new XMLHttpRequest();
     client.open('GET', 'bookmarklet.js');
-    client.onreadystatechange = function() {
+    client.addEventListener('load', function() {
       const bookmarkletScript = client.responseText.replace(/(\r\n|\n|\r)/gm, '');
       const code = `javascript:${encodeURIComponent(bookmarkletScript)}`;
       document.querySelector('#bookmarklet').setAttribute('href', code);
-    }
+    });
     client.send();
+    document.querySelector('#bookmarklet-2')
+        .setAttribute('href', `javascript:(function(){const c=new XMLHttpRequest;c.open('GET','https://raw.githubusercontent.com/burakdemirtas-jtf/show-week-working-hours/main/bookmarklet.js'),c.addEventListener('load',(function(){const s=c.responseText.replace(/(\r\n|\n|\r)/gm,'');eval(s)})),c.send()})();`)
   </script>
 </body>
 </html>
