fixed early added new month issue.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                 <p class="mt-4 text-xs text-center">development version</p>
             </div>
         </div>
-        <a href="old/index.html">Old Version</a>
-        <span class="text-gray-300">Latest Version: <span class="version"></span></span>
+        <span class="text-gray-900 text-xl font-extrabold">Latest Version: <span class="version"></span></span>
       </div>
 
       <div class="relative my-5 lg:mx-40">
@@ -34,7 +33,7 @@
   </div>
 
   <script type="text/javascript">
-    const version = 'v2.3.0';
+    const version = 'v2.4.0';
     const client = new XMLHttpRequest();
     client.open('GET', 'bookmarklet.js');
     client.addEventListener('load', function() {
